--- a/carousel.css
+++ b/carousel.css
@@ -5,7 +5,7 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
-  background-image: url(img/nature-sky-sunset-man.jpeg)
+  /*background-image: url(img/nature-sky-sunset-man.jpeg)*/
 }
 
 
