--- a/profile.css
+++ b/profile.css
@@ -36,6 +36,7 @@ body {
 }
 h1{
     font-family: 'Libre Baskerville', cursive;
+    font-size: 30px;
 }
 h3{
     font-family: 'Architects Daughter', cursive;
@@ -175,6 +176,12 @@ div{
     padding-right: 15px;
     padding-top: 30px;
     font-size: 3em;
+}
+.glyphicon-cog{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+    font-size: 1.5em;
 }
 #profilePic{
     border-radius: 100%;
