--- a/profile.css
+++ b/profile.css
@@ -49,6 +49,12 @@ h4{
     font-size: 30;
     color: black;
 }
+h5{
+    font-family: 'Arvo', cursive;
+    color: black;
+    text-align: left;
+    font-size: 30px;
+}
 #splash {
     background-color:black; 
     background-size: cover;
@@ -119,7 +125,6 @@ div{
 #bg {
     margin-bottom: 7vw;
     background: rgba(255, 255, 255, 0.4);
-    border-radius: 10%;
 }
 #bg {
     max-width: 40em;
@@ -195,6 +200,7 @@ div{
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 0px;
+    padding-bottom: 0px;
     font-size: 1.5em;
 }
 #profilePic{
