this image had better work

--- a/addHike.css
+++ b/addHike.css
@@ -5,7 +5,7 @@
  */
 
 body{
-    background-image: url(../gollyzoom.github.io/img/skyGrass.jpg);
+    background-image: url(img/skyGrass.jpg);
     width: 100%;
     height: 100%;
     overflow-x: hidden;
