--- a/search.css
+++ b/search.css
@@ -290,7 +290,7 @@ td {
     color:darkgreen;
 }
 .well {
-    background-image: url(../gollyzoom.github.io/img/fire-cooking-outdoors-camping.jpg);
+    background-image: url(img/fire-cooking-outdoors-camping.jpg);
     border-color: black;
 }
 #two.well{
