--- a/addHike.css
+++ b/addHike.css
@@ -5,7 +5,7 @@
  */
 
 body{
-    background-image: url(img/skyGrass.jpg);
+    background-image: url(img/appartments.jpg);
     width: 100%;
     height: 100%;
     overflow-x: hidden;
@@ -328,3 +328,41 @@ font-size: 1.2em;
  .navbar {
     background: rgba(255,255,255,0.7);
   }
+html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+        float: left;
+        width: 63%;
+        height: 100%;
+      }
+      #right-panel {
+        float: right;
+        width: 34%;
+        height: 100%;
+      }
+#right-panel {
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+#right-panel select, #right-panel input {
+  font-size: 15px;
+}
+
+#right-panel select {
+  width: 100%;
+}
+
+#right-panel i {
+  font-size: 12px;
+}
+
+      .panel {
+        height: 100%;
+        overflow: auto;
+      }
