--- a/profile.css
+++ b/profile.css
@@ -99,6 +99,7 @@ h5{
 div{
     display: block;
 }
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
@@ -214,6 +215,13 @@ div{
     padding-top: 0px;
     padding-bottom: 0px;
     font-size: 1.5em;
+}
+.glyphicon-search{
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    font-size: 1em;
 }
 #profilePic{
     border-radius: 100%;
