added hike beginning and end inputs

--- a/addHike.css
+++ b/addHike.css
@@ -5,7 +5,7 @@
  */
 
 body{
-    background-image: url(img/appartments.jpg);
+    background-image: url(img/wood-texture-640x925.jpg);
     width: 100%;
     height: 100%;
     overflow-x: hidden;
