--- a/one-page-wonder.css
+++ b/one-page-wonder.css
@@ -8,7 +8,7 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 .alert{
-    /*display: none;*/
+    display: none;
 }
 .header-image {
     display: block;
