--- a/carousel2.css
+++ b/carousel2.css
@@ -88,9 +88,9 @@ body {
 
 #mini-pic {
     /*margin-left: 8%;*/
-    margin: 0px;
+    /*margin: 0px;
     /*align-content: center;*/
-    border-radius: 100%;
+    /*border-radius: 100%;
     width: 15vw;
 }
 
