--- a/dashboard.css
+++ b/dashboard.css
@@ -103,3 +103,12 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+/*
+ * button code
+ */
+.btn-xl {  
+    padding: 100px 100px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 6px
+}
