updated dashboard a little

--- a/carousel2.css
+++ b/carousel2.css
@@ -7,7 +7,7 @@
 
 body {
   padding-bottom: 40px;
-  background-image: url(img/foggy-trees.jpeg);
+  background-image: url(img/night-camera-lens-map.jpg);
   /*color: #5a5a5a;
   background-color: aqua;*/
   /*background-image: url(img/nature-sky-sunset-man.jpeg)*/
