--- a/profile.css
+++ b/profile.css
@@ -13,7 +13,7 @@ a:hover {
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color: #333;
+  color: #fff;
   text-shadow: none; /* Prevent inheritence from `body` */
   background-color: #fff;
   border: 1px solid #fff;
@@ -27,13 +27,15 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #00ace6;
 }
 body {
-  color: #fff;
+  color:#fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+
 }
+/*
 h1{
     font-family: 'Libre Baskerville', cursive;
     font-size: 30px;
@@ -55,8 +57,9 @@ h5{
     text-align: left;
     font-size: 30px;
 }
+*/
 #splash {
-    background-color:black; 
+    background-color:#00ace6; 
     background-size: cover;
     width: 100vw;
     margin:auto;
@@ -175,6 +178,7 @@ div{
   .masthead-brand {
     float: left;
   }
+}
   .masthead-nav {
     float: right;
   }
@@ -195,6 +199,10 @@ div{
 
 .masthead{
     background: rgba(200,255,200,.2);
+}
+.accordion
+{
+    
 }
 /*
  * Footer
