fixing the carousel

--- a/carousel2.css
+++ b/carousel2.css
@@ -7,12 +7,39 @@
 
 body {
   padding-bottom: 40px;
-  background-image: url(img/foggy-trees.jpeg);
+  background-image: url(img/forest.jpg);
   /*color: #5a5a5a;
   background-color: aqua;*/
   /*background-image: url(img/nature-sky-sunset-man.jpeg)*/
 }
-
+.btn-primary{
+    background-color: gold;
+    border-color: darkgoldenrod;
+}
+#filter-button{
+    font-family:'Lobster', cursive;
+    font-size: 1.5em;
+    background-color: black;
+    background: black;
+    border-color: black;
+}
+#clear-button{
+    font-family:'Lobster', cursive;
+    font-size: 1.5em;
+    margin: 10px;
+    background-color: antiquewhite;
+    background: whitesmoke;
+    border-color: floralwhite;
+    color:black;
+}
+label{
+    color:black;
+}
+.btn-primary:hover {
+    color: #fff;
+    background-color:red;
+    border-color:orange;
+}
 #title {
     width: 100%;
     background-color: none;
@@ -28,6 +55,8 @@ body {
     color:black;
     background-color: snow;
 }
+
+
 
 #carousel{
     width:auto;
