did basically nothing

--- a/one-page-wonder.css
+++ b/one-page-wonder.css
@@ -14,7 +14,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('img/hiker-landing2.jpg') no-repeat center center scroll;
+    background: url('img/night-camera-lens-map.jpg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
