--- a/profile.css
+++ b/profile.css
@@ -35,6 +35,12 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 
 }
+h1{
+    font-family:'Lobster', cursive;
+    font-size: 2.4em;
+   /* border-left: 5px;*/
+    /*border-right: 10px;*/
+}
 /*
 h1{
     font-family: 'Libre Baskerville', cursive;
