--- a/carousel2.css
+++ b/carousel2.css
@@ -97,7 +97,8 @@ label{
     background-color:#00ace6;
    /* box-shadow: 0 0 2px 5px rgb(255,255,255);*/
     
-    border: 2px solid rgb(255,255,255);
+    border: 5px solid rgba(255,255,255,0);
+    
     border-radius: 25px;
     position: relative;
     margin-top: 20px;
@@ -126,13 +127,21 @@ label{
     text-align: center;
     color: floralwhite;
 }
-
+.slick-slide img {
+    border: 0px solid #FFF;
+    display: block;
+    width: 100%;
+}
 #mini-pic {
     /*margin-left: 8%;*/
     /*margin: 0px;
     /*align-content: center;*/
     /*border-radius: 100%;
-    width: 15vw;
+    width: 15vw;*/
+    margin-left: 30%;
+    margin-right: 30%;
+    height: 10em;
+    width: 10em;
 }
 
 /* CUSTOMIZE THE NAVBAR
@@ -223,6 +232,42 @@ label{
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
+@media (min-width: 768px) {
+  /* Navbar positioning foo */
+  .navbar-wrapper {
+    margin-top: 20px;
+  }
+  .navbar-wrapper .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-wrapper .navbar {
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  /* The navbar becomes detached from the top, so we round the corners */
+  .navbar-wrapper .navbar {
+    border-radius: 4px;
+  }
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 992px) {
+  .featurette-heading {
+    margin-top: 120px;
+  }
+}
 @media (min-width: 768px) {
   /* Navbar positioning foo */
   .navbar-wrapper {
