--- a/profile.css
+++ b/profile.css
@@ -266,11 +266,11 @@ a:hover {
     font-size: 1em;
 }
 .glyphicon-trash{
-    padding-left: 1em;
-    padding-right: 5px;
+    padding-left: .6em;
+    padding-right: .6em;
     padding-top: 0px;
     padding-bottom: 0px;
-    font-size: 1.5em;
+    font-size: 1.2em;
     
 }
 .glyphicon-trash:hover{
