--- a/carousel2.css
+++ b/carousel2.css
@@ -138,7 +138,7 @@ label{
     /*margin-left: 8%;*/
     /*margin: 0px;
     /*align-content: center;*/
-    /*border-radius: 100%;
+    border-radius: 100%;/*
     width: 15vw;*/
     margin-left: 30%;
     margin-right: 30%;
