--- a/addHike.css
+++ b/addHike.css
@@ -15,6 +15,7 @@ body{
     width: auto;
 }
 #bg{
+    margin-top: 5%;
             margin-bottom: 7vw;
             background: rgba(0, 0, 0, 0.8);
             border-radius: 2%
