--- a/profile.css
+++ b/profile.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   /*background-color: #00ace6;*/
-  background-image: url(img/wood-texture-640x925.jpg);
+  /*background-image: url(img/wood-texture-640x925.jpg);*/
   color:#fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
