--- a/profile.css
+++ b/profile.css
@@ -15,7 +15,7 @@ a:hover {
 .btn-default:focus {
   /*color: #fff;*/
   text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
+  background-color: #00ace6;
   border: 1px solid #fff;
 }
 
@@ -146,6 +146,7 @@ a:hover {
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
+  background-color:#00ace6;
   display: table-cell;
   vertical-align: top;
 }
@@ -230,7 +231,7 @@ a:hover {
 }
 
 .masthead{
-    background: rgba(200,255,200,.2);
+    /*background: rgba(200,255,200,.2);*/
 }
 .accordion
 {
@@ -292,8 +293,8 @@ a:hover {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
-    top: 0;
+    /*position: fixed;*/
+    top: 30;
   }
   .mastfoot {
     position: fixed;
