added warning for hike sign in page

--- a/sign-up.css
+++ b/sign-up.css
@@ -3,7 +3,9 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
+.alert{
+    display: none;
+}
 body{
     width: 100%;
     height: 100%;
